css/events.css
#calendarDisplay{
    display: grid;
    grid-template-columns: repeat(7, 1fr);
    grid-auto-flow: dense;
    justify-content: center;
    width: 100%;
}
#calendarDisplay.listview{
    display: flex;
    flex-direction: column;
}
.hidden{
    display: none;
}
#calendarDisplay .calendarDay {
    gap: 0px;
    min-width: 0;
    background-color: var(--red);
    border: 2px solid var(--black);
    text-align: center;
    padding: 10px 5px;
    font-size: 18px;
}
#calendarDisplay .calDay{
    padding: 5px;
    min-width: 0;
    min-height: 50px;
    text-align: left;
    cursor: pointer;
    border: 2px solid var(--black);
}
.calDay p {
    font-size: 14px;
}
.calDay .evTitle {
    font-size: 10px;
    letter-spacing: -1px;
}
.listview .calDay .evTitle {
    font-size: 20px;
}

main {
    padding: 1rem;
    display: flex;
    flex-direction: column;
    align-items: center;
}
h1 {
    font-size: 72px;
    margin-top: 70px;
}
p {
    font-family: "chainprinter", sans-serif;
}
#eventsCalendar {
    width: 100%;
}
#viewSelectionHolder {
    display: flex;
    flex-direction: column;
    margin: 10px;
    gap: 0.5rem;
    text-align: center;
}
.selectButtonDiv {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    gap: 10px;
}
.calMonthSelectDiv {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 15px;
    gap: 0.5rem;
}
.monthYearDisplay {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
    gap: 1rem;
}
#monthSelectButtonsHolder {
    display: flex;
    flex-direction: row;
    gap: 1rem;
}
#yearText {
    font-family: "cotton", sans-serif;
    font-size: 28px;
    color: var(--purple);
}
.dayEvent {
    color: var(--red);
    line-height: 1;
    padding: 5px 0px 5px 0px;
}

.listChangeButtonsHolder {
    display: flex;
    flex-direction: row;
    margin: 15px;
}
.listview .calDay .dayEvent {
    font-size: 70px;
    color: var(--black);
}
.listview h3 {
    margin: 10px 0px 10px 0px;
}

#eventsList {
    margin-top: 30px;
}
#eventInfo {
    line-height: 1;
    margin: 10px 0px 10px 0px;
    font-size: 16px;
}
#eventInfo .link {
    font-family: "elza-narrow", sans-serif;
    line-height: 2;
}
#eventBody img {
    max-width: 100%;
}
.artistInfo {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    margin: 40px 0px 40px 0px;
}
.artistName {
    font-size: 24px;
    font-weight: bold;
}
.artistGenre {
    font-weight: bold;
}
.artistDesc {
    font-size: 16px;
}
.artistInfo a {
    font-family: "elza-narrow", sans-serif;
    font-size: 16px;
}

.viewSelect:focus {
    background-color: var(--blue);
    border: 3px solid var(--black);
    font-weight: bold;
}
.viewSelect {
    padding: 0.3rem 1rem;
    text-decoration: none;
    font-family: "elza-narrow", sans-serif;
    color: var(--black);
    background-color: var(--white);
    font-size: 1.3rem;
    width: fit-content;
    margin: auto;
    border: 2px solid var(--black);
    border-radius: 5px;
}
.monthSelect {
    padding: 0px;
    text-decoration: none;
    font-family: "elza-narrow", sans-serif;
    letter-spacing: 2px;
    font-weight: bold;
    color: var(--black);
    background-color: var(--white);
    font-size: 1.3rem;
    width: fit-content;
    margin: 10px;
}
.monthSelect.arrow {
    font-size: 2rem;
}
.monthSelect:hover {
    transform: scale(1.5);
}
.weekSelect {
    padding: 0.3rem 1rem;
    text-decoration: none;
    font-family: "elza-narrow", sans-serif;
    color: var(--purple);
    background-color: var(--white);
    font-size: 1.3rem;
    width: fit-content;
    margin: auto;
    border: 3px solid var(--purple);
    border-radius: 5px;
}
.weekSelect:hover {
    color: var(--white);
    background-color: var(--purple);
    border: 3px solid var(--purple);
}
#myBtn {
  display: none;
  position: fixed;
  bottom: 2rem;
  right: 2rem;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  z-index: 99;
  border: 4px solid var(--black);
  background-color: var(--white);
  color: var(--black);
  cursor: pointer; 
  padding: 6px 5px 3px 6px;
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 1.5rem;
  font-weight: bold;
  line-height: -5px;
  opacity: 75%;
}
#myBtn:hover {
  background-color: #555; 
  opacity: 75%;
}



@media screen and (min-width: 768px) {
    h1 {
        font-size: 80px;
        letter-spacing: 2px;
        margin-top: 40px;
    }
    #eventsCalHead {
        display: flex;
        flex-direction: column;
        align-items: center;
    }
    #calendarDisplay{
        width: 70%;
    }
    #calendarDisplay .calendarDay {
        gap: 0px;
        min-width: 0;
        border: 2px solid var(--black);
        text-align: center;
        padding: 10px 5px;
        font-size: 20px;
    }
    #calendarDisplay .calDay{
        padding: 10px;
        min-width: 0;
        min-height: 100px;
        text-align: left;
        cursor: pointer;
        border: 3px solid var(--black);
    }
    .calDay p {
        font-size: 18px;
    }
    .listview .calDay .evTitle {
        font-size: 24px;
    }
    .listview h3 {
        margin: 30px 40px;
    }
    .listview .dayEvent h3 {
        margin: 40px 0px 20px 0px;
    }
    .listview .dayEvent{
        margin: 20px 40px;
    }
    .listview .calDay .dayEvent {
        font-size: 50px;
    }
    .calDay .evTitle {
        font-size: 20px;
    }
    #eventsList {
        margin: 40px 0px 40px 0px;
        padding: 20px 210px;
    }
    #eventInfo {
        margin: 15px 0px 15px 0px;
        font-size: 20px;
    } 
    #eventBody img {
        max-width: 50%;
    }
    .artistInfo {
        display: flex;
        flex-direction: column;
        gap: 1rem;
        margin: 70px 0px 70px 0px;
    } 
    #myBtn {
        right: 5rem;
        width: 50px;
        height: 50px;
        padding: 9px 5px 0px 6px;
        text-align: center;
        display: flex;
        align-items: center;
        justify-content: center;
        font-size: 2rem;
        font-weight: bold;
        line-height: -5px;
        opacity: 100%;
    }
}

